syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 937
// EnetChannelId: 0
// EnetIsReliable: true
message PlayerEnterDungeonRsp {
	int32 retcode = 2;
	uint32 point_id = 1;
	uint32 dungeon_id = 13;
}
